# tmp_celery_manager

./: .env.template  .env.test  .gitignore  Makefile  docker-compose.yml  pyproject.toml
migration/: env.py
migration/versions/: rev20250710T143509_migration_auto.py
src/: env.py  errors.py  log.py
src/app_api/: dependencies.py  main.py  middlewares.py  test_main.py
src/app_api/models/request_models/: feed_rec_request_info.py
src/app_api/models/response_models/: feed_rec_response_info.py
src/app_api/routes/: tg_parser_router.py
src/app_celery/: main.py  manager.py  tasks.py  tests.py
src/app_dash/: run_dash_page.py
src/app_dash/dashboard/pages/: 100_Task.py  101_Checker.py  101_Workers.py
src/app_dash/utils/: streamlit.py
src/common/: array_utils.py  async_utils.py  moment.py  pydantic_utils.py  test_typing.py  typing.py
src/const/: permissions.py
src/db_main/: database.py
src/db_main/cruds/: tg_post_crud.py  tg_task_crud.py
src/db_main/models/: models.py  tg_post.py  tg_task.py
src/dto/: post.py  redis_models.py  redis_task.py  task.py  tg_post.py  tg_task.py
src/external_telegram/: scrapy_manager.py  telegram_scrapy.py
srv/common/: const.py
